--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "merge-images": "^2.0.0",
     "mongodb": "^5.5.0",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
