--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "google-auth-library": "^8.8.0",
+    "jsonwebtoken": "^9.0.0",
     "merge-images": "^2.0.0",
     "mongodb": "^5.5.0",
     "nodemon": "^2.0.22",
